@@ -1,8 +1,7 @@
 class FlashMessage {
-
 	static displayRequestFailure(status, exception, modal) {
 		console.log('request failure. Status: ', status, ' Exception: ', exception);
-		this.display('danger', "Une erreur s'est produite.", false, modal);
+		this.display('danger', typeof labelErrorOccured != 'undefined' ? labelErrorOccured :  "Une erreur s'est produite.", false, modal);
 	}
 
 	static displaySuccess(message, reload, modal) {
